# linuxcap

./: .gitignore  CMakeLists.txt  README.md
include/: cap.h  encoder.h  imageprocess.h  logdef.h  nano_bmp.h  utils.h
src/: CMakeLists.txt  cap.c  encoder.c  imageprocess.cpp  main.cpp  utils.c
